Fixed mobile About alignment and added polish features

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="DANTEKILLSTORM - Professional photographer and videographer portfolio. KillyDidIt - Visual storytelling at its finest."
+      content="DANTEKILLSTORM - Professional photographer and videographer in Cape Town. Specializing in weddings, portraits, and events. KillyDidIt - Visual storytelling with street-level edge."
     />
+    <meta name="keywords" content="photographer, videographer, Cape Town, wedding photography, portrait photography, event photography, visual storytelling, DANTEKILLSTORM" />
+    <meta name="author" content="DANTEKILLSTORM" />
+    <meta property="og:title" content="KillyDidShootit - DANTEKILLSTORM Portfolio" />
+    <meta property="og:description" content="Professional photographer and videographer specializing in authentic visual narratives. Based in Cape Town, South Africa." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="KillyDidShootit - DANTEKILLSTORM Portfolio" />
+    <meta name="twitter:description" content="Professional photographer and videographer specializing in authentic visual narratives." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script type="text/javascript">
       (function(l) {
