--- a/public/index.html
+++ b/public/index.html
@@ -8,17 +8,17 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="DANTEKILLSTORM - Professional photographer and videographer in Cape Town. Specializing in weddings, portraits, and events. KillyDidIt - Visual storytelling with street-level edge."
+      content="KillyDidShootIt - Professional photography studio specializing in creative photography, weddings, portraits, and events. Based in Cape Town, South Africa."
     />
-    <meta name="keywords" content="photographer, videographer, Cape Town, wedding photography, portrait photography, event photography, visual storytelling, DANTEKILLSTORM" />
-    <meta name="author" content="DANTEKILLSTORM" />
-    <meta property="og:title" content="KillyDidShootit - DANTEKILLSTORM Portfolio" />
-    <meta property="og:description" content="Professional photographer and videographer specializing in authentic visual narratives. Based in Cape Town, South Africa." />
+    <meta name="keywords" content="photography studio, photographer, Cape Town, wedding photography, portrait photography, event photography, creative photography, KillyDidShootIt" />
+    <meta name="author" content="KillyDidShootIt" />
+    <meta property="og:title" content="KillyDidShootIt - Creative Photography Studio" />
+    <meta property="og:description" content="Professional photography studio specializing in creative photography, weddings, portraits, and events. Based in Cape Town, South Africa." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="KillyDidShootit - DANTEKILLSTORM Portfolio" />
-    <meta name="twitter:description" content="Professional photographer and videographer specializing in authentic visual narratives." />
+    <meta name="twitter:title" content="KillyDidShootIt - Creative Photography Studio" />
+    <meta name="twitter:description" content="Professional photography studio specializing in creative photography, weddings, portraits, and events." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <script type="text/javascript">
       // Force HTTPS redirect
@@ -52,7 +52,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>KillyDidShootit - DANTEKILLSTORM Portfolio</title>
+    <title>KillyDidShootIt - Creative Photography Studio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
